[project]
name = "langgraph-projects"
version = "0.1.0"
description = "Langraph based tutorials"
authors = [
    {name = "Ashish265",email = "ashishgupta2692@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "openai (>=1.103.0,<2.0.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)",
    "pypdf (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
